1-infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: devops-test-svc
                port:
                  number: 80
          - path: /api/chw/patient
            pathType: Prefix
            backend:
              service:
                name: ikure-chw-patient-be-svc
                port:
                  number: 80
